# slowly

./: Slowly.cabal  Slowly.hs  slowly.hs
Slowly/: Collector.hs
