Name: Slowly
Version: 0.0.1
Cabal-Version: >= 1.2
Build-type: Simple
License: MIT
Copyright: 
  Copyright 2009 Infinity Interactive, Yuval Kogman
Author: Yuval Kogman <nothingmuch@woobling.org>
Maintainer: Yuval Kogman <nothingmuch@woobling.org>
Homepage: http://www.iinteractive.com/
Category: Network
Synopsis: HTTP profiling
Description: 

 <git://git.iinteractive.com/Slowly.git>

Library
  Exposed-modules: 
                 Slowly.Collector

  GHC-options: -fwarn-missing-signatures -Wall
  Build-depends: random, uuid, json, curl, HTTP, containers, time, base >= 4, network

Executable slowly
  Main-is: slowly.hs

  
